# curio-cabinet

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
deploy/: Dockerfile  deploy.sh  docker-compose.yml
deploy/nfs/: backup.sh  run.sh
docs/: config-reference.md  deploy-nfs.md  migrations.md  quickstart.md  security.md
examples/camera-lenses/: collection.yaml
examples/hand-tools/: collection.yaml
examples/impact-toys/: collection.yaml
examples/mechanical-keyboards/: collection.yaml
scripts/: migrate_v1.py
src/curio_cabinet/: __init__.py  app.py  auth.py  cli.py  coerce.py  colors.py  compute.py  config.py  configio.py  csvio.py  db.py  images.py  instance.py  query.py  registry.py  schema.py  units.py
src/curio_cabinet/static/css/: app.css  fonts.css  tokens.css
src/curio_cabinet/static/js/: app.js  theme.js
src/curio_cabinet/templates/: _empty.html  _fields.html  _filters.html  _pivot.html  _results.html  base.html  browse.html  detail.html  list.html
src/curio_cabinet/templates/admin/: _base.html  cleanup.html  customize.html  dashboard.html  form.html  import.html  login.html  maintenance.html  overview.html  settings.html  todos.html
src/curio_cabinet/views/: admin.py  public.py
tests/: conftest.py  test_admin_flow.py  test_admin_import.py  test_admin_todo.py  test_auth.py  test_coerce.py  test_compute.py  test_config.py  test_configio.py  test_csvio.py  test_images.py  test_public_views.py  test_query.py  test_review_fixes.py  test_schema.py  test_units.py
