[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curio-cabinet"
version = "0.1.0"
description = "A self-hosted, config-driven catalog for the things you collect."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Zander" }]
keywords = ["collection", "catalog", "self-hosted", "sqlite", "flask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flask>=3.1,<4",
    "pydantic>=2.7,<3",
    "PyYAML>=6.0,<7",
    "argon2-cffi>=23.1",
    "pyotp>=2.9,<3",
    "Pillow>=10.3",
    "qrcode>=7.4",
    "click>=8.1",
]

[project.optional-dependencies]
heic = ["pillow-heif>=0.16"]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
curio-cabinet = "curio_cabinet.cli:main"

[project.urls]
Homepage = "https://github.com/zndr/curio-cabinet"

[tool.hatch.build.targets.wheel]
packages = ["src/curio_cabinet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
